--- a/index.html
+++ b/index.html
@@ -40,11 +40,44 @@
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-<<<<<<< HEAD
-            <button class="btn btn-outline-success" type="submit">Get Time</button>
-=======
             <button class="btn btn-outline-success" type="submit">Search</button>
->>>>>>> 1be42ed0aea90ca4bb29ec2e65e786467d32a7c9
+            
+          </form>
+        </div>
+      </div>
+    </nav>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled">Disabled</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Get Time</button>
             
           </form>
         </div>
@@ -77,6 +110,24 @@
         </ul>
       </div>
     </div>
+    <div class="p-5">
+      <div class="p-5 mb-4 bg-dark rounded-3">
+        <div class="container-fluid py-5 ">
+          <h1 class="display-5 fw-bold text-light">Current Time is <span id="time"></span></h1>
+          <p class="text-light ">We got you covered.</p>
+          <hr class="my-4">
+          <p class="col-md-8 fs-4 text-white-50">We are here to show you the time in different countries :</p>
+
+            <select id="select_box" class="form-select form-select-md mb-3 mt-3">
+              <option value="12">New Zealand</option>
+              <option value="5.5" selected="selected">India</option>
+              <option value="-7">USA (LA) </option>
+            </select>
+            <button id="getTimee" class="btn btn-primary btn-lg" type="submit">Get Time</button>
+        </div>
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <div class="p-5">
       <div class="p-5 mb-4 bg-dark rounded-3">
         <div class="container-fluid py-5 ">
