--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -90,6 +90,42 @@
         </div>
       </div>
     </div>
+    
+    <div class="container my-4">
+      <h2 class="text-center">TODOs List</h2>
+      <div class="form-group">
+        <label for="title">Title</label>
+        <input type="text" class="form-control" id="ti" placeholder="Enter Task">
+        <small id="titleHelp" class="form-text text-muted">Add an item to the list</small>
+      </div>
+      <div class="form-group">
+        <label for="description">Description</label>
+        <textarea class="form-control" id="description" rows="3"></textarea>
+      </div>
+      <button type="submit" id="addToList" class="btn btn-primary">Add Item</button>
+      <div id="tasks" class="my-4">
+        <h2>Your Tasks</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Task</th>
+              <th scope="col">Description</th>
+              <th scope="col">Actions</th>
+            </tr>
+          </thead>
+          <tbody id="tb">
+            <tr>
+              <th scope="row">1</th>
+              <td>Eat</td>
+              <td>Healthy meal</td>
+              <td><button class="deleteBtn">Delete</button></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="Events.js"></script>
   </body>
